--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,144 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-origin: padding-box;
+  font-family: 'Poppins', sans-serif;
+  user-select: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  font-size: 16px;
+}
+
+.calculator{
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+}
+
+.calc-container{
+  background-color: #1d1d1d;
+
+  width: 600px;
+  height: auto;
+
+  border-radius: 0 0 30px 30px;
+}
+
+.output{
+  width: 100%;;
+}   
+
+.operation{
+  width: 600px;
+  height: 70px;
+
+  color: #878787;
+
+  font-size: 1.9em;
+  font-weight: bold;
+
+  position: relative;
+  overflow: hidden;
+}
+.operation .value{
+  position: absolute;
+
+  bottom: 5px;
+  right : 10px;
+  
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.result{
+  width: 600px;
+  height: 140px;
+
+  color: #FFF;
+
+  font-size: 2rem;
+  font-weight: bold;
+  
+  overflow: hidden;
+  position: relative;
+}
+
+.result .value{
+  position: absolute;
+
+  top: 50%;
+  transform: translateY(-50%);
+  right : 10px;
+  
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+
+.input{
+  background-color: #FFF;
+
+  border-radius: 0 0 25px 25px;
+  border: 1px solid #1d1d1d;
+  height: 340px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.input button{
+  width: 52px;
+
+  font-size: 1.2em;
+
+  border: none;
+  border-radius: .3rem;
+  background-color: #e9f2fd;
+
+  margin : 8px 10px;
+
+  cursor: pointer;
+}
+
+.input button:hover{
+  font-weight: bold;
+}
+
+.input .calculate{
+  color: #FFF;
+  background-color: #4845fb;
+  width : 121px;
+  border-radius: 50px;
+}
+.input .delete{
+  color: #FFF;
+  background-color: #e05046;
+}
+
+.division, .multiplication, .subtraction, .addition {
+  color: #4845fb;
+}
+
+/* .input button span{
+  font-size: 0.6em;
+  position: absolute;
+} */
+
+.active-angle{
+  background-color: #1d1d1d !important;
+  color: #FFF !important;
 }
